refactor(demo06): 应用 Phase 2 code review 反馈
- 类 javadoc 追加 Skills 子系统说明（与已有"在 Demo04 基础上新增"列表对齐）
- skillRegistry 字段声明处即初始化为空，避免 getSkillRegistry() 返回 null
- 移动 getSkillRegistry() 到公共 getter 区（addSessionChangeListener 之后），不再被夹在私有方法之间
- 统一 stream 收集风格：collect(Collectors.toList()) → toList()，移除 Collectors import
- 去掉不必要的 this. 前缀；system prompt 拼接段补 ⭐ 标记

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>