@@ -27,7 +27,6 @@ import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 /**
  * Agent 服务层 —— 封装 Agent 的初始化、生命周期管理、会话管理和异步调用。
@@ -36,6 +35,8 @@ import java.util.stream.Collectors;
  * <ul>
  *   <li>创建 {@link LongTermMemoryManager} 并注入 AgentLoop，启用跨会话长期记忆</li>
  *   <li>每轮对话结束后异步触发记忆提取（Ingest），将知识写入 memories.md</li>
+ *   <li>集成 Skills 子系统：启动时扫描 {@code ~/.afs/skills/}，注册 {@code load_skill} 工具，
+ *       并将 Skills 菜单追加到 system prompt 末尾，由 LLM 自主决定按需加载</li>
  * </ul>
  * <p>
  * 职责：
@@ -60,8 +61,9 @@ public class AgentService {
     /** 长期记忆管理器 —— 跨会话的知识持久化和检索 */
     private LongTermMemoryManager longTermMemoryManager;
 
-    /** Skill 注册表 —— 启动时扫描 ~/.afs/skills/ 填充；供 GUI 与 LoadSkillTool 查询 */
-    private SkillRegistry skillRegistry;
+    /** Skill 注册表 —— 启动时扫描 ~/.afs/skills/ 填充；供 GUI 与 LoadSkillTool 查询。
+     *  字段初始化为空注册表，避免 initialize() 之前 GUI 层调用 getSkillRegistry() 拿到 null */
+    private final SkillRegistry skillRegistry = new SkillRegistry();
 
     /** load_skill 工具引用 —— setCallback 时回填 callback */
     private LoadSkillTool loadSkillTool;
@@ -95,20 +97,19 @@ public class AgentService {
         // ⭐ 初始化 Skills 子系统
         SkillLoader skillLoader = new SkillLoader();
         List<SkillMeta> skillMetas = skillLoader.loadAll();
-        this.skillRegistry = new SkillRegistry();
-        this.skillRegistry.register(skillMetas);
+        skillRegistry.register(skillMetas);
         log.info("已发现 {} 个 skill: {}", skillMetas.size(),
-                skillMetas.stream().map(SkillMeta::getName).collect(Collectors.toList()));
+                skillMetas.stream().map(SkillMeta::getName).toList());
 
         // 注册工具（ExecTool + LoadSkillTool）
         ToolRegistry toolRegistry = new ToolRegistry();
         toolRegistry.register(new ExecTool());
-        this.loadSkillTool = new LoadSkillTool(this.skillRegistry);
-        toolRegistry.register(this.loadSkillTool);
+        loadSkillTool = new LoadSkillTool(skillRegistry);
+        toolRegistry.register(loadSkillTool);
         log.info("已注册工具: {}", toolRegistry.all().stream().map(t -> t.name()).toList());
 
-        // 拼接最终 system prompt（基础 prompt + Skills 菜单）
-        String skillMenu = this.skillRegistry.toPromptMenu();
+        // ⭐ 拼接最终 system prompt（基础 prompt + Skills 菜单）
+        String skillMenu = skillRegistry.toPromptMenu();
         String finalSystemPrompt = skillMenu.isEmpty()
                 ? AgentConfig.SYSTEM_PROMPT
                 : AgentConfig.SYSTEM_PROMPT + "\n\n" + skillMenu;
@@ -274,6 +275,18 @@ public class AgentService {
         sessionManager.addListener(listener);
     }
 
+    /**
+     * 获取 Skill 注册表 —— 供右侧 SkillSidebar 遍历所有 skill 渲染列表。
+     * <p>
+     * 字段在声明处即初始化为空注册表，{@link #initialize()} 内填充实际数据，
+     * 因此本方法返回值永不为 null。
+     *
+     * @return 注册表实例
+     */
+    public SkillRegistry getSkillRegistry() {
+        return skillRegistry;
+    }
+
     // ==================== 消息发送 ====================
 
     /**
@@ -377,15 +390,6 @@ public class AgentService {
         } catch (Exception e) {
             log.error("同步消息到会话失败: {}", e.getMessage(), e);
         }
-    }
-
-    /**
-     * 获取 Skill 注册表 —— 供右侧 SkillSidebar 遍历所有 skill 渲染列表。
-     *
-     * @return 注册表实例；若尚未初始化（不应发生）则返回 null
-     */
-    public SkillRegistry getSkillRegistry() {
-        return skillRegistry;
     }
 
     /**
